# TF-Animalysis

./: .gitignore  README.md  main.py  pyproject.toml  test_crepe.py  test_pesto.py
data/test_examples_rumbles/f0_corrected_interpol/: ADDO2012A036.WAV_a0104_71.f0.csv  ADDO2012A076.WAV_a0176_114.f0.csv
data/test_rumbles/elelet_500/: ADDO2012A008.WAV_a0014_10.npz  ADDO2012A010.WAV_a0018(1)_13.npz  ADDO2012A012.WAV_a0023_18.npz  ADDO2012A013.WAV_a0025(2)_19.npz  ADDO2012A013.WAV_a0025(3)_20.npz  ADDO2012A013.WAV_a0025(4)_21.npz  ADDO2012A015.WAV_a0031(1)_30.npz  ADDO2012A015.WAV_a0031(2)_31.npz  ADDO2012A016.WAV_a0045_41.npz  ADDO2012A018.WAV_a0051_44.npz  ADDO2012A018.WAV_a0053(1)_45.npz
data/test_rumbles/elelet_750/: ADDO2012A008.WAV_a0014_10.npz  ADDO2012A015.WAV_a0031(1)_30.npz  ADDO2012A036.WAV_a0104_71.npz  ADDO2012A076.WAV_a0176_114.npz  (+1 more)
demos/: demo_masked_elespectrogram.py  demo_masked_tf.py  demo_tf.py
f0_extraction/: HYBRID_ELELET.md  HYBRID_STFT.md  README.md  annotate_f0.py  check_f0.py  drawing_to_f0.py  extract_f0.py  extract_f0_elelet.py  extract_f0_hybrid_elelet.py  extract_f0_magnitude_elelet.py  extract_f0_magnitude_stft.py  extract_f0_stft.py  hybrid_elelet.py  hybrid_stft.py  pipeline.py  precompute_representations.py  realign_f0.py  refine_f0.py  refine_f0_elelet.py  refine_f0_formulas.tex  refine_f0_harmonic_elelet.py  refine_f0_stft.py
tf_representations/: __init__.py  utils_elespectrogram.py
tf_transforms/: transforms.py  utils_auditory_scales.py  utils_elelet.py  utils_harmonic_mask.py
utils/: analyze_lengths.py  annotate_f0.py  cluster_f0_umap.py  compute_f0_magnitude.py  compute_harmonic_prior.py  copy_awesome_rumbles.py  correct_f0_stft.py  extract_f0.py  fix_f0_f1_confusion.py  formant_filter_ntvow.py  peak_rms_stats.py  precompute_representations.py  prepare_bigvgan_data.py  prepare_training_data.py  preprocessing4synth.py  reextract_f0_range.py  refine_f0_harmonic_elelet.py  refine_f0_harmonic_mss.py  resample.py  resample_ntvow.py  split_dataset.py  trim.py  trim_and_stretch.py  trim_end_markers_by_lowfreq.py
(+91 files in other folders)
